# bb_alembic

./: .cproject  .gitignore  .gitmodules  .hg_archival.txt  .project  CMakeLists.txt  build_setttings.txt  install.sh
arnold/: CMakeLists.txt
arnold/Procedural/: CMakeLists.txt  ProcMain.cpp  WriteGeo.cpp
arnold/Tests/: testbed.cpp
arnold/bb_ArnoldProcedural/: CMakeLists.txt  Overrides.h  ProcArgs.cpp  ProcArgs.h  ProcMain.cpp  SampleUtil.cpp  WriteGeo.cpp
doc/: ALEMBIC_CONTRIBUTOR_ACKNOWLEDGEMENTS.doc  Alembic_Required_Notices.doc
houdini/SOP_AlembicIn/: Makefile.hcustom
lib/Alembic/AbcCoreAbstract/: Foundation.h
maya/: CMakeLists.txt
maya/AbcExport/: AbcExport.cpp  CMakeLists.txt
maya/AbcImport/: CMakeLists.txt  main.cpp
maya/bb_alembicArchiveNode/: AEgpuCacheRelated.mel  AEgpuCacheTemplate.mel  AEgpuCacheTemplate.res.mel  CMakeLists.txt  Makefile  Makefile.inc  doGpuCacheExportArgList.mel  doGpuCacheExportArgList.res.mel  doGpuCacheImport.mel  doGpuCacheImportArgList.mel  doGpuCacheImportArgList.res.mel  gpuCacheCreateUI.mel  gpuCacheCreateUI.res.mel  gpuCacheInitStrings.mel  gpuCacheListModelEditorPanels.mel  gpuCacheShapeNode.cpp  gpuCacheShapeNode.h  performGpuCacheExport.mel  performGpuCacheExport.res.mel  performGpuCacheImport.mel  performGpuCacheImport.res.mel
maya/bb_alembicArchiveNode/DISABLE/: BB_AlembicArchiveTranslator.cpp  CacheAlembicUtil.cpp  CacheReader.cpp  CacheReader.h  CacheReaderAlembic.cpp  CacheReaderAlembic.h  CacheWriter.cpp  CacheWriter.h  CacheWriterAlembic.cpp  CacheWriterAlembic.h  gpuCacheCmd.cpp  gpuCacheCmd.h  gpuCacheConfig.cpp  gpuCacheConfig.h  gpuCacheDrawOverride.cpp  gpuCacheDrawTraversal.cpp  gpuCacheDrawTraversal.h  gpuCacheFrustum.cpp  gpuCacheGLFT.cpp  gpuCacheGLPickingSelect.cpp  gpuCacheGLPickingSelect.h  gpuCacheGeometry.cpp  gpuCacheGeometry.h  gpuCacheMaterial.cpp  gpuCacheMaterial.h  gpuCacheMaterialBakers.cpp  gpuCacheMaterialNodes.cpp  gpuCacheMaterialNodes.h  gpuCachePluginMain.cpp  gpuCacheRasterSelect.cpp  gpuCacheRasterSelect.h  gpuCacheSample.cpp  gpuCacheSample.h  gpuCacheSelect.cpp  gpuCacheSelect.h  gpuCacheStrings.h  gpuCacheSubSceneOverride.cpp  gpuCacheSubSceneOverride.h  gpuCacheUnitBoundingBox.cpp  gpuCacheUnitBoundingBox.h  (+6 more)
maya/bb_alembicArchiveTranslator/: BB_AlembicArchiveTranslator.cpp  CMakeLists.txt
maya/delightAlembicArchive/: AbcPreview.cpp  CMakeLists.txt  CreateSceneHelper.cpp  CreateSceneHelper.h  MeshHelper.cpp  NodeIteratorVisitorHelper.h  delightAlembicArchive.cpp  delightAlembicArchive.h  main.cpp
maya/delightAlembicArchive/.svn/: entries
maya/delightAlembicArchive/.svn/text-base/: AbcPreview.h.svn-base  DrawContext.h.svn-base  Drawable.h.svn-base  Foundation.h.svn-base  GLCamera.cpp.svn-base  GLCamera.h.svn-base  ICurvesDrw.cpp.svn-base  ICurvesDrw.h.svn-base  INuPatchDrw.cpp.svn-base  INuPatchDrw.h.svn-base  IObjectDrw.cpp.svn-base  IObjectDrw.h.svn-base  IPointsDrw.cpp.svn-base  IPointsDrw.h.svn-base  IPolyMeshDrw.cpp.svn-base  IPolyMeshDrw.h.svn-base  ISubDDrw.cpp.svn-base  ISubDDrw.h.svn-base  IXformDrw.cpp.svn-base  IXformDrw.h.svn-base  MeshDrwHelper.cpp.svn-base  MeshDrwHelper.h.svn-base  NodeIteratorVisitorHelper.cpp.svn-base  delightAlembicArchive.cpp.svn-base  delightAlembicArchive.h.svn-base  main.cpp.svn-base
maya/icons/: CMakeLists.txt
maya/scripts/: CMakeLists.txt  bb_alembicAssignmentEditorUI.py
maya/shelves/: CMakeLists.txt  shelf_Alembic.mel
mtoa/: CMakeLists.txt
mtoa/bb_alembicArchiveTranslator/: CMakeLists.txt
mtoa/bb_gpuCacheTranslator/: CMakeLists.txt
prman/Procedural/: ArbAttrUtil.cpp  CMakeLists.txt  ProcArgs.cpp  ProcArgs.h  ProcMain.cpp  WriteGeo.cpp
python/examples/: CMakeLists.txt
python/examples/AbcView/lib/abcview/widget/: viewer_widget.py
